--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ repositories {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.13.2-25.0.147'
-    deobf 'com.hrznstudio:titanium:2.0.11'
+    deobf 'com.hrznstudio:titanium:2.0.+'
 }
 
 jar {
